Restore selected devices on device-select view and harden external link

--- a/popup.html
+++ b/popup.html
@@ -387,7 +387,7 @@
         </div>
         <div id="token-error" class="error-message hidden"></div>
         <button class="btn-primary" id="btn-connect">接続</button>
-        <a class="help-link" href="https://home.nature.global/" target="_blank">トークンの取得はこちら →</a>
+        <a class="help-link" href="https://home.nature.global/" target="_blank" rel="noopener noreferrer">トークンの取得はこちら →</a>
       </div>
     </div>
 
