Add persistent chevron (>) to indicate drilldown

--- a/popup.html
+++ b/popup.html
@@ -217,6 +217,13 @@
       opacity: 0.9;
     }
 
+    .drilldown-arrow {
+      font-size: 1.05rem;
+      line-height: 1;
+      color: rgba(255, 255, 255, 0.5);
+      margin-left: 2px;
+    }
+
     .room-header {
       display: flex;
       justify-content: space-between;
