--- a/popup.html
+++ b/popup.html
@@ -222,6 +222,17 @@
       line-height: 1;
       color: rgba(255, 255, 255, 0.5);
       margin-left: 2px;
+      transform: translateX(0);
+      transition: transform 0.12s ease, color 0.12s ease;
+    }
+
+    .room-card:hover .drilldown-arrow {
+      transform: translateX(2px);
+      color: rgba(255, 255, 255, 0.8);
+    }
+
+    .room-card:focus-visible .drilldown-arrow {
+      color: rgba(255, 255, 255, 0.9);
     }
 
     .room-header {
